crates/burn-onnx/src/burn/node/snapshots/burn_onnx__burn__node__col2im__tests__col2im_1d_with_padding.snap
---
source: crates/burn-onnx/src/burn/node/col2im.rs
assertion_line: 342
expression: code
---
pub fn forward(&self, input: Tensor<B, 3>) -> Tensor<B, 3> {
    let output = {
        let [batch_size, col_channels, _l] = input.shape().dims();
        let channels = col_channels / 3usize;
        let device = input.device();
        let mut result = Tensor::<B, 3>::zeros([batch_size, channels, 10usize], &device);
        let input_reshaped = input.reshape([batch_size, channels, 3usize, 10usize]);
        for pos in 0..10usize {
            let col_slice = input_reshaped
                .clone()
                .slice([0..batch_size, 0..channels, 0..3usize, pos..pos + 1])
                .reshape([batch_size, channels, 3usize]);
            for bi in 0..3usize {
                let idx = pos * 1usize + bi * 1usize;
                if idx >= 1usize && idx < 10usize + 1usize {
                    let out_idx = idx - 1usize;
                    let val = col_slice
                        .clone()
                        .slice([0..batch_size, 0..channels, bi..bi + 1]);
                    let current = result
                        .clone()
                        .slice([0..batch_size, 0..channels, out_idx..out_idx + 1]);
                    result = result
                        .slice_assign(
                            [0..batch_size, 0..channels, out_idx..out_idx + 1],
                            current + val,
                        );
                }
            }
        }
        result
    };
    output
}
